package com.company;

public class UnidadFuncionalFactory {

}
